--- a/Software/AVR128DA48/SignalSnagger/Debug/Makefile
+++ b/Software/AVR128DA48/SignalSnagger/Debug/Makefile
@@ -57,6 +57,7 @@ C_SRCS +=  \
 ../src/i2c.cpp \
 ../src/leds.cpp \
 ../src/morse.cpp \
+../src/rtc.cpp \
 ../src/si5351.cpp \
 ../src/slpctrl.cpp \
 ../src/tcb.cpp \
@@ -88,6 +89,7 @@ src/i2c.o \
 src/leds.o \
 src/morse.o \
 src/protected_io.o \
+src/rtc.o \
 src/si5351.o \
 src/slpctrl.o \
 src/tcb.o \
@@ -111,6 +113,7 @@ src/i2c.o \
 src/leds.o \
 src/morse.o \
 src/protected_io.o \
+src/rtc.o \
 src/si5351.o \
 src/slpctrl.o \
 src/tcb.o \
@@ -134,6 +137,7 @@ src/i2c.d \
 src/leds.d \
 src/morse.d \
 src/protected_io.d \
+src/rtc.d \
 src/si5351.d \
 src/slpctrl.d \
 src/tcb.d \
@@ -157,6 +161,7 @@ src/i2c.d \
 src/leds.d \
 src/morse.d \
 src/protected_io.d \
+src/rtc.d \
 src/si5351.d \
 src/slpctrl.d \
 src/tcb.d \
@@ -276,6 +281,13 @@ src/leds.o: ../src/leds.cpp
 	
 
 src/morse.o: ../src/morse.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O1 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/rtc.o: ../src/rtc.cpp
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O1 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
