--- a/Software/AVR128DA48/SignalSnagger/Debug/Makefile
+++ b/Software/AVR128DA48/SignalSnagger/Debug/Makefile
@@ -51,6 +51,7 @@ C_SRCS +=  \
 ../src/clkctrl.cpp \
 ../src/cpuint.cpp \
 ../src/dac0.cpp \
+../src/display.cpp \
 ../src/driver_init.cpp \
 ../src/eeprommanager.cpp \
 ../src/Goertzel.cpp \
@@ -82,6 +83,7 @@ src/CircularStringBuff.o \
 src/clkctrl.o \
 src/cpuint.o \
 src/dac0.o \
+src/display.o \
 src/driver_init.o \
 src/eeprommanager.o \
 src/Goertzel.o \
@@ -106,6 +108,7 @@ src/CircularStringBuff.o \
 src/clkctrl.o \
 src/cpuint.o \
 src/dac0.o \
+src/display.o \
 src/driver_init.o \
 src/eeprommanager.o \
 src/Goertzel.o \
@@ -130,6 +133,7 @@ src/CircularStringBuff.d \
 src/clkctrl.d \
 src/cpuint.d \
 src/dac0.d \
+src/display.d \
 src/driver_init.d \
 src/eeprommanager.d \
 src/Goertzel.d \
@@ -154,6 +158,7 @@ src/CircularStringBuff.d \
 src/clkctrl.d \
 src/cpuint.d \
 src/dac0.d \
+src/display.d \
 src/driver_init.d \
 src/eeprommanager.d \
 src/Goertzel.d \
@@ -239,6 +244,13 @@ src/cpuint.o: ../src/cpuint.cpp
 	
 
 src/dac0.o: ../src/dac0.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O1 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/display.o: ../src/display.cpp
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O1 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
