--- a/Software/AVR128DA48/SignalSnagger/Debug/Makefile
+++ b/Software/AVR128DA48/SignalSnagger/Debug/Makefile
@@ -47,7 +47,9 @@ C_SRCS +=  \
 ../src/adc.cpp \
 ../src/binio.cpp \
 ../src/bod.cpp \
+../src/CircularFloatBuff.cpp \
 ../src/CircularStringBuff.cpp \
+../src/CircularUintBuff.cpp \
 ../src/clkctrl.cpp \
 ../src/cpuint.cpp \
 ../src/dac0.cpp \
@@ -80,7 +82,9 @@ main.o \
 src/adc.o \
 src/binio.o \
 src/bod.o \
+src/CircularFloatBuff.o \
 src/CircularStringBuff.o \
+src/CircularUintBuff.o \
 src/clkctrl.o \
 src/cpuint.o \
 src/dac0.o \
@@ -106,7 +110,9 @@ main.o \
 src/adc.o \
 src/binio.o \
 src/bod.o \
+src/CircularFloatBuff.o \
 src/CircularStringBuff.o \
+src/CircularUintBuff.o \
 src/clkctrl.o \
 src/cpuint.o \
 src/dac0.o \
@@ -132,7 +138,9 @@ main.d \
 src/adc.d \
 src/binio.d \
 src/bod.d \
+src/CircularFloatBuff.d \
 src/CircularStringBuff.d \
+src/CircularUintBuff.d \
 src/clkctrl.d \
 src/cpuint.d \
 src/dac0.d \
@@ -158,7 +166,9 @@ main.d \
 src/adc.d \
 src/binio.d \
 src/bod.d \
+src/CircularFloatBuff.d \
 src/CircularStringBuff.d \
+src/CircularUintBuff.d \
 src/clkctrl.d \
 src/cpuint.d \
 src/dac0.d \
@@ -227,7 +237,21 @@ src/bod.o: ../src/bod.cpp
 	@echo Finished building: $<
 	
 
+src/CircularFloatBuff.o: ../src/CircularFloatBuff.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O0 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 src/CircularStringBuff.o: ../src/CircularStringBuff.cpp
+	@echo Building file: $<
+	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O0 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+src/CircularUintBuff.o: ../src/CircularUintBuff.cpp
 	@echo Building file: $<
 	@echo Invoking: AVR8/GNU C Compiler : 7.3.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-g++.exe$(QUOTE) -funsigned-char -funsigned-bitfields -DDEBUG  -I"../Config" -I"../include" -I"../utils" -I"../utils/assembler" -I".." -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\include"  -O0 -ffunction-sections -fdata-sections -g2 -Wall -mmcu=avr128da48 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\AVR-Dx_DFP\1.9.103\gcc\dev\avr128da48" -c -fno-threadsafe-statics -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
